--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,11 +14,15 @@ concurrency:
 
 jobs:
 
+  get-container-version:
+    uses: ./.github/workflows/container-version.yml
+
   build-deploy:
     if: ${{ (github.event_name != 'pull_request' || (github.event.pull_request.head.repo.full_name == github.repository)) && github.event.action != 'closed' }}
     runs-on: ubuntu-latest
+    needs: get-container-version
     container:
-      image: acreyes/kamayan:v1
+      image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
     steps:
     - uses: actions/checkout@v4
       with:
@@ -126,8 +130,9 @@ jobs:
   cleanup:
     if : ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}
     runs-on: ubuntu-latest
+    needs: get-container-version
     container:
-      image: acreyes/kamayan:v1
+      image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
     steps:
     - name: Set github reference as Slug environment variable
       run: |
