--- a/.github/workflows/container-version.yml
+++ b/.github/workflows/container-version.yml
@@ -5,4 +5,13 @@ on:
     outputs:
       version:
         description: "The Docker container version"
-        value: v2
+        value: ${{ jobs.output-version.outputs.version }}
+
+jobs:
+  output-version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+    steps:
+      - id: version
+        run: echo "version=v2" >> $GITHUB_OUTPUT
