--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,16 +29,14 @@ jobs:
         submodules: recursive
         lfs: 'true'
 
-    - name: checkoutLFS
-      uses: actions/checkout@v2
-    - run: git lfs pull
-
     - name: Set github reference as Slug environment variable
+      working-directory: ${{ github.workspace }}
       run: |
         echo "Slug=$(echo "${{ github.head_ref }}" | sed "s/\//\-/g")" >> "$GITHUB_ENV"
 
     - name: If no github.head_ref, use last chunk of github.ref as Slug
       if: github.head_ref == ''
+      working-directory: ${{ github.workspace }}
       run: |
         IFS="\/";
         read -a strarr <<< "${{ github.ref }}";
@@ -46,6 +44,7 @@ jobs:
         echo "Slug=$(echo $last_ref)" >> "$GITHUB_ENV"
 
     - name: Document which reference
+      working-directory: ${{ github.workspace }}
       run: echo "Running for reference ${{ env.Slug }}"
 
     - name: Install uv
@@ -59,10 +58,12 @@ jobs:
         python-version-file: "pyproject.toml"
 
     - name: Install the project
+      working-directory: ${{ github.workspace }}
       run: uv sync --all-extras --dev
 
     - name: Set up Python
       id: python-setup
+      working-directory: ${{ github.workspace }}
       run: uv python install
 
     - name: Setup Graphviz
@@ -76,8 +77,7 @@ jobs:
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      working-directory: ${{ github.workspace }}
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=g++
@@ -91,15 +91,17 @@ jobs:
         -S ${{ github.workspace }}
 
     - name: Build
-      # Build your program with the given configuration. 
+      working-directory: ${{ github.workspace }}
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --target docs
 
     - name: Configure Git user
+      working-directory: ${{ github.workspace }}
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
     - name: Build docs
+      working-directory: ${{ github.workspace }}
       run: |
         git fetch origin gh-pages --depth=1
         uv run mike deploy --push ${{ env.Slug }}
@@ -135,6 +137,7 @@ jobs:
       image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
     steps:
     - name: Set github reference as Slug environment variable
+      working-directory: ${{ github.workspace }}
       run: |
         echo "Slug=$(echo "${{ github.head_ref }}" | sed "s/\//\-/g")" >> "$GITHUB_ENV"
 
@@ -153,19 +156,23 @@ jobs:
         python-version-file: "pyproject.toml"
 
     - name: Install the project
+      working-directory: ${{ github.workspace }}
       run: uv sync --all-extras --dev
 
     - name: Set up Python
       id: python-setup
+      working-directory: ${{ github.workspace }}
       run: uv python install
 
     - name: Configure Git user
+      working-directory: ${{ github.workspace }}
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
 
     - name: remove pr docs
+      working-directory: ${{ github.workspace }}
       run: |
         git remote set-branches origin '*'
         git fetch -v --depth=1
