--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -91,8 +91,8 @@ jobs:
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --target docs
 
     - name: Configure Git user
-      working-directory: ${{ github.workspace }}
       run: |
+        cd ${{ github.workspace }}
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
