--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,10 +24,17 @@ jobs:
     container:
       image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
     steps:
+
     - uses: actions/checkout@v4
       with:
         submodules: recursive
         lfs: 'true'
+
+    - name: Configure Git user
+      working-directory: ${{ github.workspace }}
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
 
     - name: Set github reference as Slug environment variable
       working-directory: ${{ github.workspace }}
@@ -89,12 +96,6 @@ jobs:
     - name: Build
       working-directory: ${{github.workspace}}
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --target docs
-
-    - name: Configure Git user
-      run: |
-        cd ${{ github.workspace }}
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
 
     - name: Build docs
       working-directory: ${{ github.workspace }}
