--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,13 +26,15 @@ jobs:
     steps:
 
     - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-        lfs: 'true'
+      # with:
+        # submodules: recursive
+        # lfs: 'true'
 
     - name: Configure Git user
       working-directory: ${{ github.workspace }}
       run: |
+        pwd
+        ls -a
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
 
