--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,7 @@ jobs:
     needs: get-container-version
     container:
       image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
+      options: --user root
     steps:
 
     - uses: actions/checkout@v4
@@ -33,10 +34,8 @@ jobs:
     - name: Configure Git user
       working-directory: ${{ github.workspace }}
       run: |
-        pwd
-        ls -altr
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git config user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
 
     - name: Set github reference as Slug environment variable
       working-directory: ${{ github.workspace }}
