--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -214,7 +214,7 @@ jobs:
     # problem setup more ergonomic
     - name: pyKamayan runs
       working-directory: ${{github.workspace}}
-      run: mpirun -np 2 uv run kamayan run src/problems/sedov.py parthenon/time/nlim=100
+      run: mpirun -np 2 uv run kamayan src/problems/sedov.py parthenon/time/nlim=100
 
 
   ci-status-check:
