--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,14 +19,12 @@ jobs:
 
   changes:
     runs-on: ubuntu-latest
-    # Required permissions
     permissions:
       pull-requests: read
-    # Set job outputs to values from filter step
     outputs:
       src: ${{ steps.filter.outputs.src }}
+      python: ${{ steps.filter.outputs.python }}
     steps:
-    # For pull requests it's not necessary to checkout the code
     - uses: dorny/paths-filter@v3
       if: ${{ github.event_name == 'pull_request' }}
       id: filter
@@ -35,6 +33,10 @@ jobs:
           src:
             - 'src/**'
             - 'CMakeLists.txt'
+            - '.github/workflows/CI.yml'
+          python:
+            - 'kamayan/**/*.py'
+            - 'pyproject.toml'
             - '.github/workflows/CI.yml'
 
   lint-format:
@@ -92,15 +94,52 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: uv run ruff check
 
-    - name: Type Check Python
-      if: success() || steps.python-setup.outcome == 'success'
-      working-directory: ${{ github.workspace }}
-      run: uv run pyright
-
     - name: Format Python
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
       run: uv run ruff format --check
+
+  type-check-python:
+    needs: [changes, get-container-version]
+    if: ${{ needs.changes.outputs.python == 'true' || github.event_name != 'pull_request' }}
+    runs-on: ubuntu-latest
+    container:
+      image: acreyes/kamayan:${{ needs.get-container-version.outputs.version }}
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Wait for build workflow
+      uses: lewagon/wait-on-check-action@v1.3.4
+      with:
+        ref: ${{ github.event.pull_request.head.sha || github.sha }}
+        check-name: 'build-kamayan-artifacts'
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        wait-interval: 10
+
+    - name: Download stub files
+      uses: actions/download-artifact@v4
+      with:
+        name: kamayan-stubs
+        path: kamayan/pyKamayan/
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+      with:
+        enable-cache: true
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
+
+    - name: Install the project
+      run: uv sync --all-extras --dev
+
+    - name: Type Check Python
+      run: uv run pyright
 
   build-unit-regression-test:
     needs: [changes, get-container-version]
@@ -229,10 +268,11 @@ jobs:
       # Require every other job in this workflow
       - build-unit-regression-test
       - lint-format
+      - type-check-python
     runs-on: ubuntu-latest
     steps:
       - uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: build-unit-regression-test
+          allowed-skips: build-unit-regression-test, type-check-python
           jobs: ${{ toJSON(needs) }}
 
