--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -57,9 +57,9 @@ jobs:
         -DPARTHENON_ENABLE_TESTING=OFF
       working-directory: ${{github.workspace}}
 
-    - name: Build docs target
+    - name: Build docs target and stubs
       working-directory: ${{github.workspace}}
-      run: cmake --build build -j4 --target docs
+      run: cmake --build build -j4 --target docs pyKamayan
 
     - name: Upload stub files
       uses: actions/upload-artifact@v4
