--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -120,8 +120,10 @@ jobs:
         wait-interval: 10
 
     - name: Download stub files
-      uses: actions/download-artifact@v4
+      uses: dawidd6/action-download-artifact@v3
       with:
+        workflow: build-artifacts.yml
+        commit: ${{ github.event.pull_request.head.sha || github.sha }}
         name: kamayan-stubs
         path: kamayan/pyKamayan/
 
