--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -22,10 +22,15 @@ RUN apt-get update && apt-get -y install \
     libz-dev \
     openssh-client \
     git \
+    git-lfs \
     wget \
     curl \
+    graphviz \
+    graphviz-dev \
     openmpi-bin openmpi-common libopenmpi-dev \
     libhdf5-mpi-dev
+
+RUN git lfs install
 
 ENTRYPOINT ["/bin/bash"]
 
