pytest unit testing

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ site
 docs/assets/generated/*
 *hdf*
 **/pyKamayan.cpython-313-darwin.so
-kamayan/pyKamayan
+kamayan/pyKamayan/**/*.pyi
+kamayan/pyKamayan/**/*.typed
 compile_commands.json
 __pycache__
 **/.*
